Web Inspector: Invalid selectors can be applied to the stylesheet https://bugs.webkit.org/show_bug.cgi?id=147230

Reviewed by Timothy Hatcher.

* inspector/InspectorStyleSheet.cpp:
(WebCore::isValidSelectorListString):
(WebCore::InspectorStyleSheet::setRuleSelector):
Now checks to see that the supplied selector is valid before trying to commit it to the rule.
(WebCore::InspectorStyleSheet::addRule):
(WebCore::checkStyleRuleSelector): Deleted.


Canonical link: https://commits.webkit.org/165952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188222 268f45cc-cd09-0410-ab3c-d52691b4dbfc